<resources>
    <string name="app_name">Notification App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="news_thumbnail">news thumbnail</string>
    <string name="channels">Channels</string>
    <string name="about">About</string>
    <string-array name="string_array_settings">
        <item>Manual refresh only</item>
        <item>Auto Refresh: 10 minutes</item>
    </string-array>
    <string name="about_message">Notification App!\nBy @kszyhu and Sebastian.\nIncubator 2017</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="archive">Archive</string>
    <string name="news_from_your_rss_channels">News from your RSS channels!</string>
    <string name="add_channel_dialog_text">Add Rss Channel</string>
    <string name="add_channel_dialog_title">RSS Channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_url">Channel URL</string>
    <string name="user_text_hint">Put text to display on external screen</string>
    <string name="display_text_on_screen">Display text on Screen</string>
    <string name="clear_screen">Clear Screen</string>
    <string name="user_text">External LCD Module</string>
    <string name="send_message_failed">Send message FAILED</string>

</resources>
