<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/navigation_channels"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/channels" />
        <item
            android:id="@+id/navigation_archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive" />
        <item
            android:id="@+id/navigation_user_text"
            android:icon="@drawable/ic_desktop_windows_black_24dp"
            android:title="@string/user_text" />
    </group>
</menu>
